<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".cuentaActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="104dp"
        android:layout_marginEnd="104dp"
        android:text="@string/app_titulo"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <EditText
        android:id="@+id/editMain_nombre"
        style="@style/AppTheme.edtApp"
        android:layout_width="208dp"
        android:layout_height="150dp"

        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/ic_baseline_person_25"
        android:hint="@string/app_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editMain_Email"
        style="@style/AppTheme.edtApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"

        android:drawableStart="@drawable/ic_baseline_mail_outline_24"
        android:hint="@string/app_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMain_nombre" />

    <EditText
        android:id="@+id/editMain_Pass"
        style="@style/AppTheme.edtApp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/app_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMain_Email" />

    <EditText
        android:id="@+id/editMain_RepPass"
        style="@style/AppTheme.edtApp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/app_rep_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMain_Pass" />

    <Button
        android:id="@+id/button"
        style="@style/AppTheme.btnApp"
        android:onClick="goToLogPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/app_buttonCrear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMain_RepPass" />

</androidx.constraintlayout.widget.ConstraintLayout>